Adding media-queries

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,10 +1,18 @@
 /* Colors */
-$paragraph-color: #000000;
-$brand-main-color: #ff0000;
+$sidebar-background: #000000;
+$sidebar-font: #F5F5F2;
+$sidebar-background-hover: #979797;
+$sidebar-font-hover: #56819F;
+$button-dark: #f58220;
+$button-hover: #FFA200;
+$background-color: #E3E3E3;
+$marked-color: #04ae00;
+$font-color: #7f8c8d;
 
 /* Font sizes */
 $paragraph-font-size: 16px;
 
 /* Fonts */
-$brand-font: "Open Sans", Helvetica, Arial;
-$paragraph-font: "Open Sans", Helvetica, Arial;
+$main-font: 'Open Sans', sans-serif;
+$fancy-font: 'Dancing Script', cursive;
+$bar-font: 'Montserrat', sans-serif;
