--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,9 @@
 
-import "variables";
-import "mixins";
+@import '../variables';
+@import '../mixins';
 
-import "normalize";
-import "layout";
+@import '../normalize';
+@import '../layout';
 
 /* Components 
 import "components/form_field";
