Adding Side and Navbar style

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -2,24 +2,27 @@
   box-sizing: border-box;
 }
 
+html {
+  box-sizing: border-box;
+  }
+
 body {
   background: $background-color;
   font-family: $main-font;
   line-height: 1.7;
   display: flex;
-  display: block;
-  flex-wrap: wrap;
+  margin: 0;
 }
 
-.container {
+/*.main-container {
   width: 100%;
   max-width: 1170px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-}
+}*/
 
-.page__container {
+.page-container {
   width: calc(100% - 240px);
   top: 50px;
   left: 240px;
@@ -56,5 +59,3 @@ body {
     max-width: $width;
   }
 }
-
-// !GRID //
