--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,7 @@ $sidebar-font-hover: #56819F;
 $button-dark: #f58220;
 $button-hover: #FFA200;
 $background-color: #E3E3E3;
+$light-color: white;
 $marked-color: #04ae00;
 $font-color: #7f8c8d;
 
